# ChangeLog for dev-python/sphinx_rtd_theme
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx_rtd_theme/ChangeLog,v 1.13 2015/05/26 06:37:11 patrick Exp $

*sphinx_rtd_theme-0.1.8 (26 May 2015)

  26 May 2015; Patrick Lauer <patrick@gentoo.org>
  +sphinx_rtd_theme-0.1.8.ebuild:
  Bump

  10 May 2015; Jeroen Roovers <jer@gentoo.org> sphinx_rtd_theme-0.1.7.ebuild:
  Mark ~ppc64 (bug #543742).

  28 Mar 2015; Markus Meier <maekke@gentoo.org> sphinx_rtd_theme-0.1.7.ebuild:
  add ~arm, bug #543742

  21 Mar 2015; Jeroen Roovers <jer@gentoo.org> sphinx_rtd_theme-0.1.7.ebuild:
  Marked ~hppa (bug #543742).

*sphinx_rtd_theme-0.1.7 (18 Mar 2015)

  18 Mar 2015; Patrick Lauer <patrick@gentoo.org>
  +sphinx_rtd_theme-0.1.7.ebuild:
  Bump, change RDEP to PDEP for newer sphinx

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  x86 stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  ppc stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  amd64 stable, bug 540290

  04 Sep 2014; Ian Delaney <idella4@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  added missing RDEP, fixes Bug 521998 by W.T. King

  15 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  sphinx_rtd_theme-0.1.6.ebuild:
  Keyword ~ppc, bug #517086

  14 Jul 2014; Ian Delaney <idella4@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  add py3.4 pypy support

  30 Jun 2014; Mike Gilbert <floppym@gentoo.org> sphinx_rtd_theme-0.1.6.ebuild:
  Depend on setuptools.

*sphinx_rtd_theme-0.1.6 (09 Jun 2014)

  09 Jun 2014; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +sphinx_rtd_theme-0.1.6.ebuild:
  Initial import