@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>python</herd>
-<upstream>
-  <remote-id type="pypi">sphinx_rtd_theme</remote-id>
-</upstream>
+  <herd>python</herd>
+  <upstream>
+    <remote-id type="pypi">sphinx_rtd_theme</remote-id>
+    <remote-id type="github">snide/sphinx_rtd_theme</remote-id>
+  </upstream>
 </pkgmetadata>
