@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sphinx_rtd_theme
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx_rtd_theme/ChangeLog,v 1.13 2015/05/26 06:37:11 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx_rtd_theme/ChangeLog,v 1.14 2015/06/07 16:10:47 jlec Exp $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add github to remote-id in metadata.xml
 
 *sphinx_rtd_theme-0.1.8 (26 May 2015)
 
